# PCSC_Non_Linear_Systems

./: README.md
Non_Linear_Systems/: CMakeLists.txt  Helper.cpp  Helper.h  NonLinearEquation.cpp  NonLinearEquation.h  NonLinearSolver.cpp  NonLinearSolver.h  README.md  RandomFunctions.cpp  RandomFunctions.h  RandomTest.cpp  RandomTest.h  ReadFiles.cpp  ReadFiles.h  TestBase.cpp  TestBase.h  Test_A.cpp  Test_A.h  Test_B.cpp  Test_B.h  Test_C.h  UserInterface.cpp  UserInterface.h  main.cpp  test.txt
Non_Linear_Systems/documents/report/: Report.docx
Non_Linear_Systems/doxgen-doc/: Doxyfile
Non_Linear_Systems/doxgen-doc/html/: _matrix_helper_8cpp.html  _matrix_helper_8h.html  _matrix_helper_8h__dep__incl.dot  _matrix_helper_8h_source.html  _non_linear_equation_8cpp.html  _non_linear_equation_8cpp__incl.dot  _non_linear_equation_8cpp_source.html  _non_linear_equation_8h.html  (+108 more)
Non_Linear_Systems/nonlinear/: MatrixHelper.h  NonLinearEquation.h  ReadFiles.h  UserInterface.h
Non_Linear_Systems/report/: Report.docx
Non_Linear_Systems/src/: Helper.h  MatrixHelper.cpp  MatrixHelper.h  NonLinearEquation.cpp  NonLinearEquation.h  NonLinearSolver.cpp  NonLinearSolver.h  ReadFiles.cpp  ReadFiles.h  UserInterface.cpp  UserInterface.h
Non_Linear_Systems/test/: RandomFunctions.cpp  RandomFunctions.h  RandomTest.cpp  RandomTest.h  TestBase.cpp  TestBase.h  Test_A.cpp  Test_A.h  Test_B.cpp  Test_B.h  Test_C.cpp  Test_C.h  Test_D.cpp  Test_D.hpp  google_all_test.h
Non_Linear_Systems/testfiles/: test_function.txt
Non_Linear_Systems/txt_testfiles/: test10.txt  test2.txt  test3.txt  test5.txt  test6.txt  test8.txt
(+211 files in other folders)
